# dual-fw-svm

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
benchmarks/: compare_svm.py  results_latest.csv
dual_fw_svm/: __init__.py  binary.py  multiclass.py  utils.py
tests/: test_dual_fw_svm.py
